# product_horse

./: .dockerignore  .env.ci  .env.local  .env.production  .gitignore  8-28-error.txt  CLEAR SHADOW  Dockerfile  README.md  cf.html  core.html  deploy.sh  docker_history.txt  enable_rls.sql  fly.toml  gen_no_media_reqs.sh  index.html  package-lock.json  pyproject.toml  requirements-no-media.txt  robots.txt  search.json  settings.ini  sitemap.xml  test.html  test.txt
.github/workflows/: cicd.yaml  deploy.yaml  test.yaml
_proc/: index.ipynb
db/: schema.sql
db/migrations/: 20240829223317_tz_setup.sql  20240829224230_file_status_enum.sql
frontend/: .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  graphql.ts  main.tsx  schema.ts  store.ts  types.ts
frontend/src/components/: AnimatedErrorMessage.tsx  EmptyState.tsx  Navigation.tsx  PulsingButton.tsx  SaveFilesForm.tsx  VideoJS.tsx  video-editor.tsx
frontend/src/components/auth/: LoginForm.tsx  Logout.tsx  SignupForm.tsx
frontend/src/components/extension/: file-upload.tsx
frontend/src/components/ui/: navigation-menu.tsx
frontend/src/components/users/: NewUser.tsx  UserList.tsx
frontend/src/components/video/: VideoList.tsx
frontend/src/utils/: handleFormErrors.ts  storage.ts  tokenManager.ts
gpu_app/: .dockerignore  Dockerfile  fly.toml  old-Dockerfile  start.sh
nbs/: 00_core.ipynb  01_filesystems.ipynb  02_audio.ipynb  03_audio_video.ipynb  04_extraction.ipynb  05_search.ipynb  06_load.ipynb  06_run_modal.ipynb  07_db.ipynb  08_api.ipynb  09_graphql.ipynb  99_gradio_app.ipynb  index.ipynb  model_stubs.pyi  nbdev.yml  test_qa_data.csv
product_horse/: __init__.py  _modidx.py  api.py  audio.py  audio_video.py  core.py  db.py  extraction.py  filesystems.py  graphql.py  load.py  run_modal.py  search.py
rust_video_py/: Cargo.toml  video_processor.py
rust_video_py/src/: lib.rs
scripts/: setup.py  setup_env.py  setup_superadmin.py  setup_tests.py  test_graphql.py  test_jwt.py  test_modal.py  test_storage_client.py
sql_files/: enable_rls.sql  setup_d1.sql  setup_vector_pg.sql
src/product_horse/: __init__.py
static_files/: bleat.m4a  test_df_merge.csv
storageClient/: package-lock.json  package.json
storage_client/: pyproject.toml  wrapper.py
storage_client/src/models/: __init__.py
videoprocessor/: Makefile  test_runner  test_videoprocessor.c  videoprocessor.c  videoprocessor.h
workers/: entry.py  openapi.yaml  package-lock.json  package.json  test_worker.py  wrangler.toml
workers/src/: api_entry.py  cf_types.py  db_ops.py  jwt.py  url_handler.py
