[project]
name = "product-horse"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Max Caldwell", email = "max@scriptt.ai" }
]

virtual=true

dependencies = [
    "pydantic>=2.6.4",
    "llama-index>=0.10.65",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.16",
    "openai>=1.14.3",
    "tiktoken>=0.6.0",
    "anthropic>=0.20.0",
    "litellm>=1.34.5",
    "llama-index-readers-database>=0.1.3",
    "llama-index-llms-anthropic>=0.1.7",
    "strawberry-graphql[debug-server]>=0.235.1",
    "passlib>=1.7.4",
    "fastapi[standard]>=0.112.1",
    "pyjwt>=2.8.0",
    "llama-index-vector-stores-postgres>=0.1.14",
    "instructor>=1.3.7",
    "assemblyai>=0.23.1",
    "tenacity>=8.2.3",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "product_horse",
    "pydub[media]>=0.25.1",
    "moviepy[media]>=1.0.3",
    "pyav[media]>=12.3.0",
    "seewav[media]>=0.1.0",
    "aiohttp>=3.10.5",
    "psycopg2>=2.9.9",
]
readme = "README.md"
requires-python = ">= 3.10.12"


[tool.rye.scripts]
setup_env = 'rye run python scripts/setup_env.py'
prep = 'nbdev_prepare'
test = 'nbdev_test'
export = 'nbdev_prepare'
exportonly = 'nbdev_export'
deploy = './deploy.sh'
deploy_prod = 'nbdev_export && fly deploy && fly deploy -c gpu_app/fly.toml'
graphql = 'strawberry server product_horse.graphql'
dev = 'rye run fastapi dev product_horse/graphql.py'
prod = 'rye run fastapi run product_horse/graphql.py'
rls-local = '''psql -d product_horse -c "SET app.rls_user_password = '$RLS_USER_PASSWORD';" -f enable_rls.sql'''
workers = 'npx wrangler dev'
setup_d1_local = 'npx wrangler d1 execute ph-storage-db --file=/Users/max/Documents/product_horse/sql_files/setup_d1.sql'
setup_d1_remote = 'npx wrangler d1 execute ph-storage-db --file=/Users/max/Documents/product_horse/sql_files/setup_d1.sql --remote'
build_storage_client = 'rye run openapi-python-client generate --path /Users/max/Documents/product_horse/workers/openapi.yaml --output-path /Users/max/Documents/product_horse/storage_client --overwrite'
deploy_worker='npx wrangler deploy'
export_nomedia_reqs = "./gen_no_media_reqs.sh"
deploy_gpu_app = "fly deploy -c gpu_app/fly.toml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye.workspace]
members = ["product_horse"]

[tool.rye]
managed = true
virtual = true
features = []
dev-dependencies = [
    "jupyterlab>=4.1.5",
    "nbdev>=2.3.13",
    "hypothesis>=6.99.9",
    "cloudflare-python>=1.0.1",
    "cloudflare>=2.19.2",
    "testcontainers-postgres>=0.0.1rc1",
    "jsonschema>=4.21.1",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
    "setuptools>=69.2.0",
    "pandas>=2.2.1",
    "tqdm>=4.66.2",
    "beautifulsoup4>=4.12.3",
    "multiprocess>=0.70.16",
    "openapi-python-client>=0.21.2",
    "certifi>=2024.7.4",
    "hatch>=1.12.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["product_horse"]
